Add IE not supported alert

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,43 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+    <script>
+        function detectIE() {
+          const ua = window.navigator.userAgent;
+
+          const msie = ua.indexOf('MSIE ');
+          if (msie > 0) {
+            // IE 10 or older => return version number
+            return parseInt(ua.substring(msie + 5, ua.indexOf('.', msie)), 10);
+          }
+
+          const trident = ua.indexOf('Trident/');
+          if (trident > 0) {
+            // IE 11 => return version number
+            const rv = ua.indexOf('rv:');
+            return parseInt(ua.substring(rv + 3, ua.indexOf('.', rv)), 10);
+          }
+
+          // other browser
+          return false;
+        }
+
+        window.onerror = function (message, url, lineno, colno, error) {
+          var errorobj = {
+            'message': message,
+            'url': url,
+            'lineno': lineno,
+            'colno': '',
+            'stack': ''
+          };
+          console.error('unhandled exception', errorobj);
+        };
+
+        if (detectIE()) {
+          alert('The Internet Explorer borowser is not supported!');
+          window.location = 'about:blank';
+        }
+      </script>
   <app-root></app-root>
 </body>
 </html>
